// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array fields array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    >
      <div
        className="MuiBox-root MuiBox-root-29"
      >
        <div />
        <div
          className="MuiGrid-root MuiGrid-container"
        >
          <div
            className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-flex-end"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <div
                className="MuiBox-root MuiBox-root-133"
              >
                <button
                  className="ms-Button ms-Button--icon root-40"
                  data-is-focusable={true}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  type="button"
                >
                  <span
                    className="ms-Button-flexContainer flexContainer-41"
                    data-automationid="splitbuttonprimary"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Icon root-37 css-48 ms-Button-icon icon-43"
                      data-icon-name="BoxAdditionSolid"
                      role="presentation"
                      style={
                        Object {
                          "fontFamily": "\\"FabricMDL2Icons-11\\"",
                        }
                      }
                    >
                      
                    </i>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-49"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-41"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-42"
          >
            <span
              className="ms-Button-label label-50"
              id="id__4"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields checkboxes 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink={true}
        htmlFor="root"
      />
      <div
        className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
        required={false}
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" "
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </div>
        <input
          autoFocus={false}
          onAnimationStart={[Function]}
          type="hidden"
          value=""
        />
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-49"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-41"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-42"
          >
            <span
              className="ms-Button-label label-50"
              id="id__16"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields fixed array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    >
      <div
        className="MuiBox-root MuiBox-root-134"
      >
        <div />
        <div
          className="MuiGrid-root MuiGrid-container"
        >
          <div
            className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
            >
              <div
                className="MuiBox-root MuiBox-root-135"
              >
                <div
                  className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
                >
                  <div
                    className="MuiBox-root MuiBox-root-136"
                  >
                    <div
                      className="ms-Grid-col ms-sm12  field field-string"
                      style={
                        Object {
                          "marginBottom": 15,
                        }
                      }
                    >
                      <div
                        className="ms-TextField is-required root-52"
                      >
                        <div
                          className="ms-TextField-wrapper"
                        >
                          <div
                            className="ms-TextField-fieldGroup fieldGroup-53"
                          >
                            <input
                              aria-invalid={false}
                              autoFocus={false}
                              className="ms-TextField-field field-54"
                              disabled={false}
                              id="root_0"
                              name="nodejs"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onInput={[Function]}
                              readOnly={false}
                              required={true}
                              type="string"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
            >
              <div
                className="MuiBox-root MuiBox-root-137"
              >
                <div
                  className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
                >
                  <div
                    className="MuiBox-root MuiBox-root-138"
                  >
                    <div
                      className="ms-Grid-col ms-sm12  field field-number"
                      style={
                        Object {
                          "marginBottom": 15,
                        }
                      }
                    >
                      <div
                        className="ms-TextField is-required root-52"
                      >
                        <div
                          className="ms-TextField-wrapper"
                        >
                          <div
                            className="ms-TextField-fieldGroup fieldGroup-53"
                          >
                            <input
                              aria-invalid={false}
                              autoFocus={false}
                              className="ms-TextField-field field-54"
                              disabled={false}
                              id="root_1"
                              name="nodejs"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onInput={[Function]}
                              readOnly={false}
                              required={true}
                              type="number"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-49"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-41"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-42"
          >
            <span
              className="ms-Button-label label-50"
              id="id__13"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;
